# job_project

./: CMakeLists.txt  app_page.cpp  app_page.h  app_page_painter.cpp  app_page_painter.h  billet_widget.cpp  billet_widget.h  buffer.cpp  buffer.h  client_socket_adapter.cpp  client_socket_adapter.h  combo_box.cpp  combo_box.h  creator.cpp  creator.cpp.autosave  creator.h  dialog.cpp  dialog.h  films_table_view.cpp  films_table_view.h  json_creator.cpp  json_creator.h  line_edit.cpp  line_edit.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.cpp  menu.h  push_button.cpp  push_button.h  qt.conf  registration_page.cpp  registration_page.h  registration_page.h.autosave  socket.cpp  socket.h  socket_adapter.cpp  socket_adapter.h  (+12 more)
